atualização das fases 3 e 4 do projeto
